@@ -1,3 +1,15 @@
+2021-07-14  Aakash Jain  <aakash_jain@apple.com>
+
+        Add step name and description to InstallBuiltProduct build step
+        https://bugs.webkit.org/show_bug.cgi?id=227935
+
+        Reviewed by Carlos Alberto Lopez Perez.
+
+        * CISupport/build-webkit-org/steps.py:
+        (InstallBuiltProduct):
+        * CISupport/ews-build/steps.py:
+        (InstallBuiltProduct):
+
 2021-07-13  Jonathan Bedard  <jbedard@apple.com>
 
         [webkitscmpy] Handle failed `git log` process
